src/mail/snapshots/epost__mail__html__tests__broken.snap
---
source: src/mail/html.rs
expression: blocks
---
- Heading:
    level: 1
    text:
      - Text:
          content: Broken markup
          style:
            bold: false
            italic: false
            underline: false
            code: false
